[package]
name = "svggen"
version = "1.0.0"
description = "Allows you to create vector images from templates."
authors = ["Tipragot <tipragot@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["graphics", "image", "svg", "generator"]
categories = ["graphics"]
repository = "https://github.com/Tipragot/svggen"
